--- a/CustomRPC/ErrorReportViewer.ar-EG.resx
+++ b/CustomRPC/ErrorReportViewer.ar-EG.resx
@@ -125,4 +125,13 @@
   <data name="$this.RightToLeftLayout" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="$this.Text" xml:space="preserve">
+    <value>التقرير عن خطأ</value>
+  </data>
+  <data name="buttonOK.Text" xml:space="preserve">
+    <value>موافق</value>
+  </data>
+  <data name="labelInfo.Text" xml:space="preserve">
+    <value>تعطل CustomRP في الجلسة السابقة بسبب الاستثناء التالي الذي لم تتم معالجته:</value>
+  </data>
 </root>
