--- a/CustomRPC/MainForm.ar-EG.resx
+++ b/CustomRPC/MainForm.ar-EG.resx
@@ -143,7 +143,7 @@
     <value>139, 22</value>
   </data>
   <data name="trayMenuQuit.Text" xml:space="preserve">
-    <value>إغلاق</value>
+    <value>خروج</value>
   </data>
   <data name="trayMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
     <value>140, 76</value>
@@ -158,7 +158,7 @@
     <value>224, 22</value>
   </data>
   <data name="savePresetToolStripMenuItem.Text" xml:space="preserve">
-    <value>حفظ الإعداد المسبق</value>
+    <value>حفظ الإعداد المُسبق</value>
   </data>
   <data name="toolStripSeparatorFile1.Size" type="System.Drawing.Size, System.Drawing">
     <value>221, 6</value>
@@ -176,7 +176,7 @@
     <value>224, 22</value>
   </data>
   <data name="quitToolStripMenuItem.Text" xml:space="preserve">
-    <value>إنهاء</value>
+    <value>خروج</value>
   </data>
   <data name="fileToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>42, 20</value>
@@ -188,7 +188,7 @@
     <value>174, 22</value>
   </data>
   <data name="runOnStartupToolStripMenuItem.Text" xml:space="preserve">
-    <value>تشغيل عند بدء التشغيل</value>
+    <value>التشغيل عند بدء التشغيل</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>174, 22</value>
@@ -221,7 +221,7 @@
     <value>58, 20</value>
   </data>
   <data name="settingsToolStripMenuItem.Text" xml:space="preserve">
-    <value>الاعدادات</value>
+    <value>الإعدادات</value>
   </data>
   <data name="openTheManualToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
     <value>176, 22</value>
@@ -281,7 +281,7 @@
     <value>إتصال</value>
   </data>
   <data name="buttonConnect.ToolTip" xml:space="preserve">
-    <value>ربط التطبيق بِرقم هوية محدد مع الحالة.</value>
+    <value>ربط التطبيق بمعرف محدد مع الحالة.</value>
   </data>
   <data name="buttonDisconnect.Text" xml:space="preserve">
     <value>انقطع الإتصال</value>
@@ -290,7 +290,7 @@
     <value>قطع اتصال التطبيق من الديسكورد. يرجى ملاحظة أنه قد يستغرق بعض الوقت.</value>
   </data>
   <data name="labelID.ToolTip" xml:space="preserve">
-    <value>رقم المعرف التطبيق من موقع ديسكورد للمُطوِّرين.</value>
+    <value>رقم معرف التطبيق من موقع ديسكورد للمُطوِّرين.</value>
   </data>
   <data name="labelDetails.ToolTip" xml:space="preserve">
     <value>السطر الأول في الحالة.</value>
@@ -326,7 +326,7 @@
     <value>الصورة الكبيرة</value>
   </data>
   <data name="labelLarge.ToolTip" xml:space="preserve">
-    <value>الصورة التي تظهر في الركن الأيمن السفلي من الصورة الكبيرة.</value>
+    <value>الصورة التي تظهر يسار النص المحدد أعلاه.</value>
   </data>
   <data name="radioButtonNone.Location" type="System.Drawing.Point, System.Drawing">
     <value>277, 4</value>
@@ -338,7 +338,7 @@
     <value>لا شيء</value>
   </data>
   <data name="radioButtonNone.ToolTip" xml:space="preserve">
-    <value>لم يتم تمكين الوقت الفعلي.</value>
+    <value>لم يتم تمكين الطابع الزمني.</value>
   </data>
   <data name="radioButtonStartTime.Location" type="System.Drawing.Point, System.Drawing">
     <value>209, 28</value>
@@ -347,7 +347,7 @@
     <value>128, 18</value>
   </data>
   <data name="radioButtonStartTime.Text" xml:space="preserve">
-    <value>منذ بداية CustomRP</value>
+    <value>منذ بدء CustomRP</value>
   </data>
   <data name="radioButtonStartTime.ToolTip" xml:space="preserve">
     <value>يظهر الوقت منذ بدء تشغيل التطبيق.</value>
@@ -430,5 +430,8 @@
   </data>
   <data name="autoconnectToolStripMenuItem.Text" xml:space="preserve">
     <value>إتصال تلقائي</value>
+  </data>
+  <data name="allowAnalyticsToolStripMenuItem.Text" xml:space="preserve">
+    <value>السماح بالتحليلات</value>
   </data>
 </root>
