--- a/CustomRPC/UpdatePrompt.pl.resx
+++ b/CustomRPC/UpdatePrompt.pl.resx
@@ -128,7 +128,7 @@
     <value>182, 14</value>
   </data>
   <data name="labelQuestion.Text" xml:space="preserve">
-    <value>Chciałbyś pobrać tą aktualizacje?</value>
+    <value>Czy chciałbyś pobrać tą aktualizacje?</value>
   </data>
   <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
     <value>257, 18</value>
