--- a/CustomRPC/MainForm.resx
+++ b/CustomRPC/MainForm.resx
@@ -231,234 +231,241 @@
     <value>File</value>
   </data>
   <data name="runOnStartupToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>171, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="runOnStartupToolStripMenuItem.Text" xml:space="preserve">
     <value>Run on Startup</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>171, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="startMinimizedToolStripMenuItem.Text" xml:space="preserve">
     <value>Start Minimized</value>
   </data>
   <data name="autoconnectToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>171, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="autoconnectToolStripMenuItem.Text" xml:space="preserve">
     <value>Autoconnect</value>
   </data>
   <data name="toolStripSeparatorSettings1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>168, 6</value>
+    <value>177, 6</value>
   </data>
   <data name="checkUpdatesToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>171, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="checkUpdatesToolStripMenuItem.Text" xml:space="preserve">
     <value>Check for Updates</value>
   </data>
   <data name="allowAnalyticsToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>171, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="allowAnalyticsToolStripMenuItem.Text" xml:space="preserve">
     <value>Allow Analytics</value>
   </data>
   <data name="toolStripSeparator1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>168, 6</value>
+    <value>177, 6</value>
   </data>
   <data name="defaultToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="defaultToolStripMenuItem.Text" xml:space="preserve">
     <value>Default</value>
   </data>
   <data name="toolStripSeparator2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>162, 6</value>
+    <value>177, 6</value>
   </data>
   <data name="agERToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="agERToolStripMenuItem.Text" xml:space="preserve">
     <value>مَصرى</value>
     <comment>@Invariant</comment>
   </data>
   <data name="csToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="csToolStripMenuItem.Text" xml:space="preserve">
     <value>Čeština</value>
     <comment>@Invariant</comment>
   </data>
   <data name="daToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="daToolStripMenuItem.Text" xml:space="preserve">
     <value>Dansk</value>
     <comment>@Invariant</comment>
   </data>
   <data name="deToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="deToolStripMenuItem.Text" xml:space="preserve">
     <value>Deutsche</value>
     <comment>@Invariant</comment>
   </data>
   <data name="elToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="elToolStripMenuItem.Text" xml:space="preserve">
     <value>Ελληνικά</value>
     <comment>@Invariant</comment>
   </data>
   <data name="enToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="enToolStripMenuItem.Text" xml:space="preserve">
     <value>English</value>
     <comment>@Invariant</comment>
   </data>
   <data name="esToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="esToolStripMenuItem.Text" xml:space="preserve">
     <value>Español</value>
     <comment>@Invariant</comment>
   </data>
   <data name="frToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="frToolStripMenuItem.Text" xml:space="preserve">
     <value>Français</value>
     <comment>@Invariant</comment>
   </data>
   <data name="heToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="heToolStripMenuItem.Text" xml:space="preserve">
     <value>עברית</value>
     <comment>@Invariant</comment>
   </data>
   <data name="huToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="huToolStripMenuItem.Text" xml:space="preserve">
     <value>Magyar</value>
     <comment>@Invariant</comment>
   </data>
+  <data name="hrToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="hrToolStripMenuItem.Text" xml:space="preserve">
+    <value>Hrvatski</value>
+    <comment>@Invariant</comment>
+  </data>
   <data name="idToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="idToolStripMenuItem.Text" xml:space="preserve">
     <value>Bahasa Indonesia</value>
     <comment>@Invariant</comment>
   </data>
   <data name="itToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="itToolStripMenuItem.Text" xml:space="preserve">
     <value>Italiano</value>
     <comment>@Invariant</comment>
   </data>
   <data name="jaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="jaToolStripMenuItem.Text" xml:space="preserve">
     <value>日本語</value>
     <comment>@Invariant</comment>
   </data>
   <data name="koToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="koToolStripMenuItem.Text" xml:space="preserve">
     <value>한국어</value>
     <comment>@Invariant</comment>
   </data>
   <data name="kuToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="kuToolStripMenuItem.Text" xml:space="preserve">
     <value>کوردی سۆرانی</value>
     <comment>@Invariant</comment>
   </data>
   <data name="ltToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="ltToolStripMenuItem.Text" xml:space="preserve">
     <value>Lietuvių</value>
     <comment>@Invariant</comment>
   </data>
   <data name="nlToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="nlToolStripMenuItem.Text" xml:space="preserve">
     <value>Nederlands</value>
     <comment>@Invariant</comment>
   </data>
   <data name="plToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="plToolStripMenuItem.Text" xml:space="preserve">
     <value>Polski</value>
     <comment>@Invariant</comment>
   </data>
   <data name="ptBRToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="ptBRToolStripMenuItem.Text" xml:space="preserve">
     <value>Português (BR)</value>
     <comment>@Invariant</comment>
   </data>
   <data name="ruToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="ruToolStripMenuItem.Text" xml:space="preserve">
     <value>Русский</value>
     <comment>@Invariant</comment>
   </data>
   <data name="thToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="thToolStripMenuItem.Text" xml:space="preserve">
     <value>ภาษาไทย</value>
     <comment>@Invariant</comment>
   </data>
   <data name="trToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="trToolStripMenuItem.Text" xml:space="preserve">
     <value>Türkçe</value>
     <comment>@Invariant</comment>
   </data>
   <data name="ukToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="ukToolStripMenuItem.Text" xml:space="preserve">
     <value>Українська</value>
     <comment>@Invariant</comment>
   </data>
   <data name="viToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="viToolStripMenuItem.Text" xml:space="preserve">
     <value>Tiếng Việt</value>
     <comment>@Invariant</comment>
   </data>
   <data name="zhhansToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="zhhansToolStripMenuItem.Text" xml:space="preserve">
     <value>汉语</value>
     <comment>@Invariant</comment>
   </data>
   <data name="zhhantToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>165, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="zhhantToolStripMenuItem.Text" xml:space="preserve">
     <value>漢語</value>
     <comment>@Invariant</comment>
   </data>
   <data name="languageToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>171, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="languageToolStripMenuItem.Text" xml:space="preserve">
     <value>Language</value>
@@ -642,14 +649,14 @@
     <comment>@Invariant</comment>
   </data>
   <data name="galaxy6430ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="galaxy6430ToolStripMenuItem.Text" xml:space="preserve">
     <value>Galaxy6430</value>
     <comment>@Invariant</comment>
   </data>
   <data name="kahpotVanillaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>149, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="kahpotVanillaToolStripMenuItem.Text" xml:space="preserve">
     <value>Kahpot Vanilla</value>
@@ -676,22 +683,36 @@
     <value>Magyar (Hungarian)</value>
     <comment>@Invariant</comment>
   </data>
+  <data name="monikaToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>180, 22</value>
+  </data>
+  <data name="monikaToolStripMenuItem.Text" xml:space="preserve">
+    <value>Monika</value>
+    <comment>@Invariant</comment>
+  </data>
+  <data name="croatianToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
+    <value>237, 22</value>
+  </data>
+  <data name="croatianToolStripMenuItem.Text" xml:space="preserve">
+    <value>Hrvatski (Croatian)</value>
+    <comment>@Invariant</comment>
+  </data>
   <data name="hapnanToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="hapnanToolStripMenuItem.Text" xml:space="preserve">
     <value>Hapnan</value>
     <comment>@Invariant</comment>
   </data>
   <data name="apolyciousToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="apolyciousToolStripMenuItem.Text" xml:space="preserve">
     <value>Apolycious</value>
     <comment>@Invariant</comment>
   </data>
   <data name="bayuSopwanToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="bayuSopwanToolStripMenuItem.Text" xml:space="preserve">
     <value>Bayu Sopwan</value>
@@ -705,14 +726,14 @@
     <comment>@Invariant</comment>
   </data>
   <data name="djd320ToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>129, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="djd320ToolStripMenuItem.Text" xml:space="preserve">
     <value>DJD320</value>
     <comment>@Invariant</comment>
   </data>
   <data name="cubeToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>129, 22</value>
+    <value>180, 22</value>
   </data>
   <data name="cubeToolStripMenuItem.Text" xml:space="preserve">
     <value>ItsMrCube</value>
@@ -796,21 +817,21 @@
     <comment>@Invariant</comment>
   </data>
   <data name="lolToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>178, 22</value>
   </data>
   <data name="lolToolStripMenuItem.Text" xml:space="preserve">
     <value>Lol1112345.lol12345</value>
     <comment>@Invariant</comment>
   </data>
   <data name="lisoToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>178, 22</value>
   </data>
   <data name="lisoToolStripMenuItem.Text" xml:space="preserve">
     <value>Liso</value>
     <comment>@Invariant</comment>
   </data>
   <data name="piterToolStripMenuItem.Size" type="System.Drawing.Size, System.Drawing">
-    <value>180, 22</value>
+    <value>178, 22</value>
   </data>
   <data name="piterToolStripMenuItem.Text" xml:space="preserve">
     <value>Piter</value>
@@ -2955,6 +2976,12 @@ To take effect, both fields should be more than 0.</value>
   <data name="&gt;&gt;lisoToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;piterToolStripMenuItem.Name" xml:space="preserve">
+    <value>piterToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;piterToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;portugeseBRToolStripMenuItem.Name" xml:space="preserve">
     <value>portugeseBRToolStripMenuItem</value>
   </data>
@@ -3123,10 +3150,22 @@ To take effect, both fields should be more than 0.</value>
   <data name="&gt;&gt;toolStripStatusLabelStatus.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripStatusLabel, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;piterToolStripMenuItem.Name" xml:space="preserve">
-    <value>piterToolStripMenuItem</value>
+  <data name="&gt;&gt;hrToolStripMenuItem.Name" xml:space="preserve">
+    <value>hrToolStripMenuItem</value>
   </data>
-  <data name="&gt;&gt;piterToolStripMenuItem.Type" xml:space="preserve">
+  <data name="&gt;&gt;hrToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;croatianToolStripMenuItem.Name" xml:space="preserve">
+    <value>croatianToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;croatianToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;monikaToolStripMenuItem.Name" xml:space="preserve">
+    <value>monikaToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;monikaToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
