--- a/CustomRPC/UpdatePrompt.ko.resx
+++ b/CustomRPC/UpdatePrompt.ko.resx
@@ -123,8 +123,15 @@
   <data name="buttonNotNow.Text" xml:space="preserve">
     <value>나중에</value>
   </data>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="labelQuestion.Size" type="System.Drawing.Size, System.Drawing">
+    <value>181, 14</value>
+  </data>
   <data name="labelQuestion.Text" xml:space="preserve">
     <value>이 업데이트를 다운로드하시겠습니까?</value>
+  </data>
+  <data name="checkBoxNeverNotify.Size" type="System.Drawing.Size, System.Drawing">
+    <value>144, 18</value>
   </data>
   <data name="checkBoxNeverNotify.Text" xml:space="preserve">
     <value>업데이트를 확인하지 않기</value>
