--- a/CustomRPC/ErrorReportViewer.da.resx
+++ b/CustomRPC/ErrorReportViewer.da.resx
@@ -117,59 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="error" xml:space="preserve">
-    <value>Fejl</value>
+  <data name="$this.Text" xml:space="preserve">
+    <value>Fejl Rapport</value>
   </data>
-  <data name="errorNoID" xml:space="preserve">
-    <value>Ingen ID valgt!</value>
+  <data name="buttonOK.Text" xml:space="preserve">
+    <value>OK</value>
   </data>
-  <data name="errorUpdateFailed" xml:space="preserve">
-    <value>Der var en fejl under download, eller installering af en opdatering.
-Tryk "Ja" for at prøve igen, ellers tryk "Nej" for at hente manuelt.</value>
-  </data>
-  <data name="firstTimeRun" xml:space="preserve">
-    <value>Første gang kørt</value>
-  </data>
-  <data name="firstTimeRunText" xml:space="preserve">
-    <value>Vil du åbne en manual?
-Du kan åben den til enhver tid ved at trykke på Hjælp -&gt; Åben Manual eller ved at trykke F1.</value>
-  </data>
-  <data name="information" xml:space="preserve">
-    <value>Information</value>
-  </data>
-  <data name="statusConnected" xml:space="preserve">
-    <value>Forbundet</value>
-  </data>
-  <data name="statusConnecting" xml:space="preserve">
-    <value>Forbinder...</value>
-  </data>
-  <data name="statusConnectionFailed" xml:space="preserve">
-    <value>Forbindelse fejlet (Er Discord åben?)</value>
-  </data>
-  <data name="statusDisconnected" xml:space="preserve">
-    <value>Forbindelse Afbrudt</value>
-  </data>
-  <data name="statusError" xml:space="preserve">
-    <value>Forbindelses Fejl (Forkert ID?)</value>
-  </data>
-  <data name="errorInvalidURL" xml:space="preserve">
-    <value>Ugyldig URL tildelt en eller flere knapper, eller teksten er for lang!</value>
-  </data>
-  <data name="errorNoInternet" xml:space="preserve">
-    <value>Kan ikke forbinde til internettet!</value>
-  </data>
-  <data name="noUpdatesFound" xml:space="preserve">
-    <value>Ingen opdateringer fundet!</value>
-  </data>
-  <data name="errorCorruptSettings" xml:space="preserve">
-    <value>Indstillings filen er korrupt.
-Tryk Ja for at nulstille den, tryk Nej for at afslutte.</value>
-  </data>
-  <data name="errorInvalidPresetFile" xml:space="preserve">
-    <value>Indlæsning af forindstilling fejlet; filen er enten manglende, korrupt eller fejl formateret.</value>
-  </data>
-  <data name="askAnalyticsConsent" xml:space="preserve">
-    <value>Vil du tillade CustomRP at sende forbrugs analyser til udvikleren?
-(Alt data er ikke forbundet til dig som bruger.)</value>
+  <data name="labelInfo.Text" xml:space="preserve">
+    <value>CustomRP har brudt været brudt ned sidste session pga. følgende fejl:</value>
   </data>
 </root>
