--- a/CustomRPC/Strings.ru.resx
+++ b/CustomRPC/Strings.ru.resx
@@ -178,4 +178,7 @@
     <value>Даёте ли вы согласие на отправку разработчику аналитических данных по использованию приложения?
 (Все данные обезличены.)</value>
   </data>
+  <data name="errorSavingSettings" xml:space="preserve">
+    <value>При сохранении настроек произошла ошибка:</value>
+  </data>
 </root>
