--- a/CustomRPC/Strings.fr.resx
+++ b/CustomRPC/Strings.fr.resx
@@ -172,4 +172,7 @@ Cliquez sur "oui" pour réinitialiser la configuration, cliquez sur "non" pour q
     <value>Autorisez-vous CustomRP à envoyer vos données analytiques au développeur ?
 (Toutes vos données sont anonymes.)</value>
   </data>
+  <data name="errorSavingSettings" xml:space="preserve">
+    <value>Une erreur est survenue durant l'enregistrement des paramètres:</value>
+  </data>
 </root>
