Updated ar-eg, both zh

--- a/CustomRPC/About.ar-EG.resx
+++ b/CustomRPC/About.ar-EG.resx
@@ -125,7 +125,7 @@
     <value>240, 19</value>
   </data>
   <data name="labelMadeBy.Text" xml:space="preserve">
-    <value>تم انشاؤه بواسطة: maximmax42</value>
+    <value>تم إنشاؤه بواسطة: maximmax42</value>
   </data>
   <data name="buttonClose.Text" xml:space="preserve">
     <value>إغلاق</value>
