--- a/CustomRPC/MainForm.resx
+++ b/CustomRPC/MainForm.resx
@@ -2156,31 +2156,34 @@ To take effect, both fields should be more than 0.</value>
   <data name="&gt;&gt;numericUpDownPartyMax.ZOrder" xml:space="preserve">
     <value>13</value>
   </data>
-  <data name="textBoxSmallKey.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="comboBoxSmallKey.Location" type="System.Drawing.Point, System.Drawing">
     <value>264, 285</value>
   </data>
-  <data name="textBoxSmallKey.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+  <data name="comboBoxSmallKey.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>2, 4, 2, 4</value>
   </data>
-  <data name="textBoxSmallKey.MaxLength" type="System.Int32, mscorlib">
+  <data name="comboBoxSmallKey.MaxDropDownItems" type="System.Int32, mscorlib">
+    <value>100</value>
+  </data>
+  <data name="comboBoxSmallKey.MaxLength" type="System.Int32, mscorlib">
     <value>32</value>
   </data>
-  <data name="textBoxSmallKey.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="comboBoxSmallKey.Size" type="System.Drawing.Size, System.Drawing">
     <value>150, 22</value>
   </data>
-  <data name="textBoxSmallKey.TabIndex" type="System.Int32, mscorlib">
+  <data name="comboBoxSmallKey.TabIndex" type="System.Int32, mscorlib">
     <value>12</value>
   </data>
-  <data name="&gt;&gt;textBoxSmallKey.Name" xml:space="preserve">
-    <value>textBoxSmallKey</value>
+  <data name="&gt;&gt;comboBoxSmallKey.Name" xml:space="preserve">
+    <value>comboBoxSmallKey</value>
   </data>
-  <data name="&gt;&gt;textBoxSmallKey.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="&gt;&gt;comboBoxSmallKey.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;textBoxSmallKey.Parent" xml:space="preserve">
+  <data name="&gt;&gt;comboBoxSmallKey.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;textBoxSmallKey.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;comboBoxSmallKey.ZOrder" xml:space="preserve">
     <value>18</value>
   </data>
   <data name="textBoxSmallText.Location" type="System.Drawing.Point, System.Drawing">
@@ -2237,31 +2240,34 @@ To take effect, both fields should be more than 0.</value>
   <data name="&gt;&gt;textBoxLargeText.ZOrder" xml:space="preserve">
     <value>32</value>
   </data>
-  <data name="textBoxLargeKey.Location" type="System.Drawing.Point, System.Drawing">
+  <data name="comboBoxLargeKey.Location" type="System.Drawing.Point, System.Drawing">
     <value>74, 285</value>
   </data>
-  <data name="textBoxLargeKey.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
+  <data name="comboBoxLargeKey.Margin" type="System.Windows.Forms.Padding, System.Windows.Forms">
     <value>2, 4, 2, 4</value>
   </data>
-  <data name="textBoxLargeKey.MaxLength" type="System.Int32, mscorlib">
+  <data name="comboBoxLargeKey.MaxDropDownItems" type="System.Int32, mscorlib">
+    <value>100</value>
+  </data>
+  <data name="comboBoxLargeKey.MaxLength" type="System.Int32, mscorlib">
     <value>32</value>
   </data>
-  <data name="textBoxLargeKey.Size" type="System.Drawing.Size, System.Drawing">
+  <data name="comboBoxLargeKey.Size" type="System.Drawing.Size, System.Drawing">
     <value>150, 22</value>
   </data>
-  <data name="textBoxLargeKey.TabIndex" type="System.Int32, mscorlib">
+  <data name="comboBoxLargeKey.TabIndex" type="System.Int32, mscorlib">
     <value>10</value>
   </data>
-  <data name="&gt;&gt;textBoxLargeKey.Name" xml:space="preserve">
-    <value>textBoxLargeKey</value>
+  <data name="&gt;&gt;comboBoxLargeKey.Name" xml:space="preserve">
+    <value>comboBoxLargeKey</value>
   </data>
-  <data name="&gt;&gt;textBoxLargeKey.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  <data name="&gt;&gt;comboBoxLargeKey.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ComboBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;textBoxLargeKey.Parent" xml:space="preserve">
+  <data name="&gt;&gt;comboBoxLargeKey.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;textBoxLargeKey.ZOrder" xml:space="preserve">
+  <data name="&gt;&gt;comboBoxLargeKey.ZOrder" xml:space="preserve">
     <value>33</value>
   </data>
   <data name="textBoxState.Location" type="System.Drawing.Point, System.Drawing">
